2009-09-17  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_wireless_dialog.c:
	  Don't use gtk_widget_set_visible() since it doesn't exist in GNOME
	  2.26 stack, causing a build failure.

2009-09-16  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_wifi_net.h, common/nwamui_wifi_net.c: 
	  Fix defect#9799 where removal of bssids didn't appear to be working.
	  What was in fact happening was that the list was being repopulated
	  by scanned wlans. This was fixed by allowing direct access to the
	  favourites only list as a separate property, while the existing
	  bssid list property remains a combination of both the favourites and
	  the scanned APs.
	* capplet/nwam_wireless_dialog.c: 
	  Ensure that we're using the favourites list when editing or adding a
	  network. If joining a network we want to see the joined list.
	  Also put in code to not validate or set the WEP key if the user
	  didn't change it in the UI - if the user switches security mode,
	  then we will validate and set the key.
	* tests/main.c: 
	  Update to turn off gtype debugging by default (caused a lot of
	  noise) and write out the contents of the favourites bssid list.

2009-09-16  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c: 
	  Change some g_errors to warnings.
	* daemon/nwam-menu.h, daemon/nwam-menu.c: 
	  Fix issue when unplugging a USB wifi adaptor where
	  gtk_container_remove was firing an assertion since the container
	  wasn't the parent of the widget - which it's not due to how things
	  are added to sub-menus.  Add function nwam_menu_remove_widget()
	  which is then used instead of gtk_container_remove in the
	  REMOVE_MENU_ITEM macro.
	* daemon/status_icon_tooltip.c: 
	  Fix double-free of g_list in nwam_tooltip_widget_remove_ncu() which
	  occurs when an NCU is removed from the system.

2009-09-15  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_condition_vbox.c: 
	  Fix a crash in select_item_with_value() where it assumed that obj