@@ -1,5 +1,13 @@
 2009-09-17  Darren Kenny  <darren.kenny@sun.com>
 
+	* common/nwamui_wifi_net.c: 
+	  Shouldn't be setting modified flag when updating status by daemon.
+	* tests/main.c: 
+	  Update processing functions to report error if sees a modified
+	  object - objects shouldn't never modified in this scenario.
+
+2009-09-17  Darren Kenny  <darren.kenny@sun.com>
+
 	* capplet/nwam_wireless_dialog.c:
 	  Don't use gtk_widget_set_visible() since it doesn't exist in GNOME
 	  2.26 stack, causing a build failure.
